chore: add Google site verification meta tag and file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/composter_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="smGGt6E7NROTXmt7sYhHi0wJ5v-RQcSag6nmuYpftj4" />
     <title>Composter</title>
     
     <!-- Open Graph Meta Tags -->
